--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -60,7 +60,7 @@
               properties:
                 SubType: "Server"
                 MemorySize: "{{ (item.ram | default(0)) | int }}"
-                AssetTag: "{{ item.asset_no | default('D42_' + (item.device_id | default(item.id) | string)) }}"
+#                AssetTag: "{{ item.asset_no | default('D42_' + (item.device_id | default(item.id) | string)) }}"
                 BiosSerialNumber: "{{ item.serial_no | default('') }}"
                 HostName: "{{ item.name | default('') }}"
                 D42id_c: "{{ item.device_id | default(item.id) | default('') }}"
