--- a/playbooks/device42-fetch-devices.yml
+++ b/playbooks/device42-fetch-devices.yml
@@ -7,11 +7,18 @@
     device42_api_url: "{{ device42_api_url }}"  # AWX Extra Vars input
     device42_auth_header: "{{ device42_auth_header }}"  # AWX Extra Vars input
     chunk_size: "{{ chunk_size | default(1) }}"  # AWX Extra Vars input, default 1
+    limit: "{{ limit | default(omit) }}"  # Opsiyonel limit değişkeni
+
+  pre_tasks:
+    - name: Build Device42 API URL with optional limit
+      set_fact:
+        device42_final_url: >-
+          {{ device42_api_url }}{% if limit is defined %}?limit={{ limit }}{% endif %}
 
   tasks:
     - name: Fetch devices from Device42
       uri:
-        url: "{{ device42_api_url }}"
+        url: "{{ device42_final_url }}"
         method: GET
         headers:
           Authorization: "{{ device42_auth_header }}"
