memory added to the payload

--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -79,6 +79,7 @@
               properties:
                 SubType: "Server"
                 MemorySize: "{{ (item.ram | default(0)) | int }}"
+                Memory: "{{ item.ram | default(item.memory | default(0)) }}"
 #                AssetTag: "{{ item.asset_no | default('D42_' + (item.device_id | default(item.id) | string)) }}"
                 BiosSerialNumber: "{{ item.serial_no | default('') }}"
                 HostName: "{{ item.name | default('') }}"
