--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -76,6 +76,12 @@
         msg: "cpuspeed: {{ item.cpuspeed }}, cpu_speed: {{ item.cpu_speed }}, mac_addresses: {{ item.mac_addresses }}"
       when: item is defined
 
+    - name: Prepare NetworkCards list
+      set_fact:
+        network_cards: >-
+          [{% for mac in item.mac_addresses | default([]) %}{"MacAddress": "{{ mac.mac | default('') }}", "Name": "{{ mac.port_name | default('') }}"}{% if not loop.last %},{% endif %}{% endfor %}]
+      when: item is defined
+
     - name: Send each device to SMAX
       vars:
         device_payload:
@@ -100,7 +106,7 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ item.mac_addresses | default([]) | map('extract', ['mac', 'port_name']) | map('combine', [{'MacAddress': '', 'Name': ''}]) | list | to_json }}"
+                NetworkCards: "{{ network_cards | to_json }}"
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
