--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -81,6 +81,7 @@
         network_cards: >-
           [{% for mac in item.mac_addresses | default([]) %}{"MacAddress": "{{ mac.mac | default('') }}", "Name": "{{ mac.port_name | default('') }}"}{% if not loop.last %},{% endif %}{% endfor %}]
       when: item is defined
+      failed_when: false
 
     - name: Debug NetworkCards
       debug:
@@ -111,7 +112,7 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ network_cards | to_json }}"
+                NetworkCards: "{{ network_cards | default([]) | to_json }}"
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
