--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -76,18 +76,6 @@
         msg: "cpuspeed: {{ item.cpuspeed }}, cpu_speed: {{ item.cpu_speed }}, mac_addresses: {{ item.mac_addresses }}"
       when: item is defined
 
-    - name: Prepare NetworkCards list
-      set_fact:
-        network_cards: >-
-          [{% for mac in item.mac_addresses | default([]) %}{"MacAddress": "{{ mac.mac | default('') }}", "Name": "{{ mac.port_name | default('') }}"}{% if not loop.last %},{% endif %}{% endfor %}]
-      when: item is defined
-      failed_when: false
-
-    - name: Debug NetworkCards
-      debug:
-        msg: "NetworkCards: {{ network_cards }}"
-      when: item is defined
-
     - name: Send each device to SMAX
       vars:
         device_payload:
@@ -112,7 +100,8 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ network_cards | default([]) | to_json }}"
+                NetworkCards: >-
+                  [{% for mac in item.mac_addresses | default([]) %}{"MacAddress": "{{ mac.mac | default('') }}", "Name": "{{ mac.port_name | default('') }}"}{% if not loop.last %},{% endif %}{% endfor %}]
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
